# Correlation_Clustering_of_Organoid_Images

./: .gitignore  README.md
code-pqap/: CMakeLists.txt  README.md
code-pqap/CMakeModules/: FindGUROBI.cmake  FindOpenCV.cmake
code-pqap/CMakeModules/unix/: FindGUROBI.cmake
code-pqap/data/: learned_parameters.txt  learning_task.txt  model_parameters.txt
code-pqap/data/clustering_results/: clustering_100_split_1_optimal.csv  clustering_100_split_2_optimal.csv  clustering_only_unseen_classes_optimal.csv  clustering_with_unseen_classes_optimal.csv
code-pqap/data/feature_vectors/: feature_vectors_organoid_dataset_100_split_1_12_1_16_20.csv  feature_vectors_organoid_dataset_100_split_2_15_1_14_23.csv  feature_vectors_organoid_dataset_unseen_classes_6_2_17_34.csv  feature_vectors_organoid_dataset_with_unseen_classes_6_2_12_59.csv
code-pqap/data/matching_results/: matching_results_organoid_dataset_unseen_classes.csv
code-pqap/include/: clustering.h  cost_definitions.h  experiment_data_handler.h  global_data_types.h  image_processing.h  memory_manager.h  mpi_handler.h  python_handler.h  solvers.h  task_handler.h  utils.h
code-pqap/include/andres/: partition-comparison.hxx
code-pqap/src/: clustering.cpp  cost_definitions.cpp  experiment_data_handler.cpp  image_processing.cpp  main.cpp  memory_manager.cpp  mpi_handler.cpp  python_handler.cpp  solvers.cpp  task_handler.cpp  utils.cpp
code-pqap/src/python_scripts/: image_segmentation_python_module.py
code-pqap/src/python_scripts/qap/: qap_solver_python_module.py
code-twin-networks/: .gitignore  README.md  callbacks.py  datasets.py  defaults.py  evaluate_models.sh  evaluation.py  metrics.py  model.py  preprocessing.py  requirements.txt  resnet18_1d.py  run.sh  siamese_histogram.py  siamese_network.py  train_models.sh  utils.py
code-twin-networks/correlation-clustering/: CMakeLists.txt  run_analysis.sh
code-twin-networks/correlation-clustering/cmake/modules/: FindGUROBI.cmake
code-twin-networks/correlation-clustering/include/andres/graph/hdf5/: hdf5.hxx
code-twin-networks/correlation-clustering/include/andres/graph/multicut/: edge-label-mask.hxx  greedy-additive.hxx
code-twin-networks/correlation-clustering/include/helpers/: argparse.hxx  reader.hxx
code-twin-networks/correlation-clustering/src/: accuracy-0-1.cxx  correlation-clustering-classifier.cxx  correlation-clustering-subsets-independent-decisions.cxx  correlation-clustering-subsets.cxx  correlation-clustering.cxx
